# ClassScheduler

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  main.py
Controller/: AccountViewController.cpp  AccountViewController.h  Controller.cpp  Controller.h  DatabaseController.cpp  DatabaseController.h  FeedbackController.cpp  FeedbackController.h  ScheduleClassController.cpp  ScheduleClassController.h  SearchClassInfoController.cpp  SearchClassInfoController.h  SearchStudentInfoController.cpp  SearchStudentInfoController.h  SearchTeacherInfoController.cpp  SearchTeacherInfoController.h  StudentGradeController.cpp  StudentGradeController.h  TaskController.cpp  TaskController.h
Managers/: AccountManager.cpp  AccountManager.h  CoreFramework.cpp  CoreFramework.h  DBManager.cpp  DBManager.h  DataManager.cpp  DataManager.h  FeedbackManager.cpp  FeedbackManager.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  StudentGradeManager.cpp  StudentGradeManager.h  TaskManager.cpp  TaskManager.h  UserManager.cpp  UserManager.h
QXlsx/source/: xlsxstyles.cpp
Qml/AccountView/: AccountView.qml
Qml/ActionItems/: ActionItemDelegate.qml  ActionItems.qml
Qml/BasicComponent/: DateSelector.qml  MButton.qml  MCheckButton.qml  RefreshButton.qml  SearchBar.qml
Qml/CalcClassMoney/: CalcClassMoney.qml
Qml/FeedbackApp/: FeedbackApp.qml
Qml/FeedbackCompany/: FeedbackCompany.qml
Qml/FileUploadView/: FileProcessingView.qml  FileUploadView.qml
Qml/FileView/: FileProcessingView.qml  FileUploadView.qml  FileView.qml
Qml/JSUtils/: ColorUtils.js  MainUtils.js
Qml/LoginView/: LoginView.qml
Qml/OperateArea/: OperateArea.qml
Qml/ScheduleClass/: ScheduleClass.qml
Qml/SearchClassInfo/: SearchClassInfo.qml  SearchClassInfoDelegate.qml
Qml/SearchStudentInfo/: SearchStudentInfo.qml  SearchStudentInfoDelegate.qml
Qml/SearchTeacherInfo/: SearchTeacherInfo.qml  SearchTeacherInfoDelegate.qml  TeacherCourseItemDelegate.qml
Qml/StudentGradeView/: StudentGradeView.qml
Qml/TaskAssistantView/: TaskAssistantView.qml  TaskItem.qml
Qml/TaskManagerView/: TaskManagerView.qml
Qml/TeacherEvaluation/: TeacherEvaluation.qml
Qml/UserInfo/: UserInfo.qml
Qml/WelcomePage/: WelcomePage.qml
Utils/: ControllerUtils.cpp  ControllerUtils.h  DataUtils.h  ManagerUtils.cpp  ManagerUtils.h
assets/: license.txt
package/: installer_script.iss
package/output/: uploadInstaller.sh
